added snack bycicle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+<script src="script.js"></script>
+<script src="bycicles.js"></script>
+<script src="students.js"></script>
 </body>
 </html>
